# MidiPedalboard

./: .gitmodules  CMakeLists.txt  README.md  pico-debug.cfg  pico_install.sh
inc/: FreeRTOSConfig.h  adc.h  adc_task.h  analog_signals.h  buttons.h  communication.h  communication_task.h  lwipopts.h  screen_task.h  ssd1306.h
src/: CMakeLists.txt  adc.c  adc_task.c  analog_signals.c  buttons.c  communication.c  communication_task.c  main.c  screen_task.c  ssd1306.c
src/ads1x15/: ads1115.c  ads1115.h
